Version (CVS)
-------------

XML: 	Add a property in castorbuilder.properties to generate a clean 'equals' method (Arnaud)
XML:	Fix a bug concerning the handling of 'Enumeration' in inner elements (Arnaud)
	
Version 0.9 February, 15 2001
-----------------------------

XML:   Adding a new feature for handling all types of content and not only TEXT content (Arnaud)  

XML:   Change the read method name for arrays (Arnaud)
       (bug reported by thebuledirt@yahoo.com)	 

XML:   Several bug fixes in the SourceGenerator concerning the attribute string value (Arnaud) 

XML:   Added improved grouping support. Grouping support is not finished,
       but is definately improved over Castor 0.8.11. 1st-level choice is
       now supported. (kvisco)

XML:   Added enumerate() method to generated enumeration types. (kvisco)

XML:   Added support for specifying certain properties of the Introspector, such
       as whether primitives should be treated as attributes or elements, and
       default naming conventions. (kvisco)

XML:   Updated mapping.xsd_sg to be compliant with latest XML Schema. (kvisco)

XML:   Added support for DOM in Marshaller.java and Unmarshaller.java
          (Andrew Fawcett andrew.fawcett@coda.com)

XML:   Added setPolymorph method to Marshaller.java. This can be used to force all field values
          to be marshalled as their field types rather than their instance types.
          (Andrew Fawcett andrew.fawcett@coda.com)

XML:    Changed the default behavior of the Xerces Serializer to preserve space
        by default.
        (Sebastien Gignoux <gignoux@intalio.com>)


XML:	Added support for restriction in simpleContent and enhanced complexType support
	(Arnaud <blandin@intalio.com>)	

XML: 	Added the command-line option '-nomarshall' which aims at preventing the
	generation of the marshalling framework specific methods (marshall, unmarshall, validate)
	(Arnaud <blandin@intalio.com>)
